--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>My Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <h1>Welcome to My Website!</h1>
+<body> 
+  <div class="center-content">
+   <h1>Welcome to My Website!</h1>
+   <img src="https://github.com/slapin-wsu/my-site/blob/main/PXL_20241214_034603356.jpg?raw=true" alt="Your Masked Photo" width="200">
   <p>This is a simple website hosted on GitHub Pages.</p>
 </body>
 </html>
