added more teaching

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
 							<div>Differential Equations</div>
 							<div>Numerical Analysis</div>
 							<div>Statitiscs</div>
+							<div>Applied Mathematics</div>
+							<div>Intro to Finite Element Method</div>
                             <p></p>
                         </div>
                     </div>
@@ -217,6 +219,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fas fa-code" title="C++"></i></li>
+						<li class="list-inline-item"><i class="fas fa-chart-line"></i></li>
                         <li class="list-inline-item"><img src="assets/img/th.jpg" alt="MATLAB" style="height: 1em;" /></li>
                         <li class="list-inline-item"><img src="assets/img/r-logo.png" alt="R" style="height: 1em;" /></li>
                     </ul>
