--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <div class="social-icons">
                         <a class="social-icon" href=https://www.linkedin.com/in/sergey-lapin-41196716/><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href=https://github.com/slapin-wsu><i class="fab fa-github"></i></a>
+						<a class="social-icon" href="https://bsky.app/profile/gray1103.bsky.social" target="_blank">
+                           <i class="fas fa-cloud"></i>
+                        </a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
@@ -85,7 +88,7 @@
                             <div class="subheading mb-3">WSU Everett</div>
                             <p> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2023 - July 2025</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
