--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<div>Intro to R</div>
 							<div>Intro to SQL</div>
 							<p></p>
-							<div class="subheading mb-3">Mathematics and Statitics</div>
+							<div class="subheading mb-3">Mathematics and Statistics</div>
 							<div>Calculus</div>
 							<div>Linear Algebra</div>
 							<div>Differential Equations</div>
@@ -178,7 +178,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Houston</h3>
-                            <div class="subheading mb-3">Mathematics and Statitics</div>
+                            <div class="subheading mb-3">Mathematics and Statistics</div>
                             <div>Calculus</div>
 							<div>Statitiscs</div>
                             <p></p>
@@ -195,8 +195,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Modeling of Ocular and Cariovasular Fluid dynamics</h3>
                             <div class="subheading mb-3"> Artciles</div>
-                            <div></div>
-							<div></div>
+                            <div><a href="https://arxiv.org/abs/2504.06315" target="_blank">Eye2Heart : a validated lumped-parameter model bridging cardiovascular and ocular dynamics</a></div>
+							<div><a href="https://iovs.arvojournals.org/article.aspx?articleid=2795482" target="_blank">Sex-specific differences in ophthalmic and central retinal artery velocity: A cardiovascular and retinal analysis</a></div>
 							<div></div>
 							<div></div>
 							<p></p>
