--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <div class="subheading mb-3"> Artciles</div>
                             <div><a href="https://arxiv.org/abs/2504.06315" target="_blank">Eye2Heart : a validated lumped-parameter model bridging cardiovascular and ocular dynamics</a></div>
 							<div><a href="https://iovs.arvojournals.org/article.aspx?articleid=2795482" target="_blank">Sex-specific differences in ophthalmic and central retinal artery velocity: A cardiovascular and retinal analysis</a></div>
-							<div></div>
+							<div><a href="https://www.maio-journal.com/index.php/MAIO/article/view/110/225" target="_blank">Modeling the eye as a window on the body</a></div>
 							<div></div>
 							<p></p>
 						</div>
