--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="subheading mb-3">WSU Everett</div>
                             <p> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2023 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2023 - JUne 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
