--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Research</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#students">Students</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
