--- a/index.html
+++ b/index.html
@@ -240,6 +240,11 @@
         <span class="badge bg-secondary ms-1">Undergraduate</span><br>
         <span class="text-muted small">Since March 2025 - B.S. Mathematics</span><br>
         Project: Modeling of Traffic Flow
+	    <div class="small mt-1">
+          <a href="#" class="me-2">Website</a>
+          <a href="#" class="me-2">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
       </li>
     </ul>
 
