--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <strong>Atemii Remizov</strong>
         <span class="badge bg-secondary ms-1">High School</span><br>
         <span class="text-muted small">Since July 2025 - Independent study</span><br>
-        Project: Modeing of Cardiac Arrhythmia
+        Project: Modeling of Cardiac Arrhythmia
         <!-- Optional links -->
         <div class="small mt-1">
           <a href="#" class="me-2">Website</a>
