--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <ul class="list-unstyled">
       <!-- COPY/PASTE THIS BLOCK PER STUDENT -->
       <li class="mb-3">
-        <strong>Atemii Remizov</strong>
+        <strong>Artemii Remizov</strong>
         <span class="badge bg-secondary ms-1">High School</span><br>
         <span class="text-muted small">Since July 2025 - Independent study</span><br>
         Project: Modeling of Cardiac Arrhythmia
