--- a/index.html
+++ b/index.html
@@ -236,11 +236,23 @@
       </li>
       <!-- /BLOCK -->
       <li class="mb-3">
-        <strong>Walker Raubich</strong>
+        <strong>Walker Raubuch</strong>
         <span class="badge bg-secondary ms-1">Undergraduate</span><br>
         <span class="text-muted small">Since March 2025 - B.S. Mathematics</span><br>
         Project: Modeling of Traffic Flow
 	    <div class="small mt-1">
+          <a href="#" class="me-2">Website</a>
+          <a href="#" class="me-2">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </li>
+		<li class="mb-3">
+        <strong>Denny Fealy</strong>
+        <span class="badge bg-secondary ms-1">Undergraduate</span><br>
+        <span class="text-muted small">Since March 2025 - Honors College Thesis</span><br>
+        Project: The Effects of Religious Practices on Academic Performance in College Students
+        <!-- Optional links -->
+        <div class="small mt-1">
           <a href="#" class="me-2">Website</a>
           <a href="#" class="me-2">GitHub</a>
           <a href="#">LinkedIn</a>
