--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="small mt-1">
           <a href="#" class="me-2">Website</a>
           <a href="#" class="me-2">GitHub</a>
-          <a href="#">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/artemii-remizov-62783631b/"> LinkedIn</a>
         </div>
       </li>
       <!-- /BLOCK -->
