--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	    <div class="small mt-1">
           <a href="#" class="me-2">Website</a>
           <a href="#" class="me-2">GitHub</a>
-          <a href="#">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/walker-raubuch-53bb04355/">LinkedIn</a>
         </div>
       </li>
 		<li class="mb-3">
