--- a/index.html
+++ b/index.html
@@ -258,6 +258,18 @@
           <a href="#">LinkedIn</a>
         </div>
       </li>
+		<li class="mb-3">
+        <strong>Alex Martin</strong>
+        <span class="badge bg-secondary ms-1">Undergraduate</span><br>
+        <span class="text-muted small">Since January 2025 - B.S. Data Analytics</span><br>
+        Project: Mathematical Modeling of Aqueous Humor
+        <!-- Optional links -->
+        <div class="small mt-1">
+          <a href="#" class="me-2">Website</a>
+          <a href="#" class="me-2">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </li>
     </ul>
 
     <h3 class="h5 text-uppercase text-muted mt-4 mb-3">Alumni</h3>
