--- a/index.html
+++ b/index.html
@@ -188,32 +188,55 @@
                 </div>
             </section>
             <hr class="m-0" />
-			 <!-- Research-->
-            <section class="resume-section" id="research">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Research</h2>
-					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Modeling of Ocular and Cariovasular Fluid dynamics</h3>
-                            <div class="subheading mb-3"> Artciles</div>
-                            <div><a href="https://arxiv.org/abs/2504.06315" target="_blank">Eye2Heart : a validated lumped-parameter model bridging cardiovascular and ocular dynamics</a></div>
-							<div><a href="https://pubmed.ncbi.nlm.nih.gov/40655312/">Analysis of Waveform Parameters in the Retinal Vasculature via Mathematical Modeling and Data Analytics Methods</a><div>							<div><a href="https://iovs.arvojournals.org/article.aspx?articleid=2795482" target="_blank">Sex-specific differences in ophthalmic and central retinal artery velocity: A cardiovascular and retinal analysis</a></div>
-							<div><a href="https://www.maio-journal.com/index.php/MAIO/article/view/110/225" target="_blank">Modeling the eye as a window on the body</a></div>
-							<div></div>
-							<p></p>
-						</div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Mathematical Epidemiolgy</h3>
-                            <div class="subheading mb-3">Articles</div>
-                            <div></div>
-							<div></div>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+			<!-- Research-->
+<section class="resume-section" id="research">
+    <div class="resume-section-content">
+        <h2 class="mb-5">Research</h2>
+
+        <!-- Ocular & Cardiovascular Modeling -->
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">Modeling of Ocular and Cardiovascular Fluid Dynamics</h3>
+
+                <!-- Articles -->
+                <div class="subheading mb-3 mt-3">Articles</div>
+                <div><a href="https://arxiv.org/abs/2504.06315" target="_blank">Eye2Heart : a validated lumped-parameter model bridging cardiovascular and ocular dynamics</a></div>
+                <div><a href="https://pubmed.ncbi.nlm.nih.gov/40655312/" target="_blank">Analysis of Waveform Parameters in the Retinal Vasculature via Mathematical Modeling and Data Analytics Methods</a></div>
+                <div><a href="https://iovs.arvojournals.org/article.aspx?articleid=2795482" target="_blank">Sex-specific differences in ophthalmic and central retinal artery velocity: A cardiovascular and retinal analysis</a></div>
+                <div><a href="https://www.maio-journal.com/index.php/MAIO/article/view/110/225" target="_blank">Modeling the eye as a window on the body</a></div>
+
+                <!-- Presentations -->
+                <div class="subheading mb-3 mt-4">Presentations</div>
+                <ul>
+                    <li><a href="assets/presentations/eye2heart-talk.pdf" target="_blank">Eye2Heart Model – Cardiovascular–Ocular Coupling (Slides)</a></li>
+                    <li><a href="assets/presentations/retinal-waveforms-talk.pdf" target="_blank">Retinal Waveform Modeling and Parameters (Slides)</a></li>
+                    <li><a href="assets/presentations/ocular-fluid-dynamics-overview.pdf" target="_blank">Overview of Ocular Fluid Dynamics Modeling</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Mathematical Epidemiology -->
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">Mathematical Epidemiology</h3>
+
+                <!-- Articles -->
+                <div class="subheading mb-3 mt-3">Articles</div>
+                <div><!-- Add epidemiology papers here --></div>
+
+                <!-- Presentations -->
+                <div class="subheading mb-3 mt-4">Presentations</div>
+                <ul>
+                    <li><a href="assets/presentations/sir-models-talk.pdf" target="_blank">SIR & SEIR Models – Core Concepts and Extensions</a></li>
+                    <li><a href="assets/presentations/vaccination-control-talk.pdf" target="_blank">Vaccination, Waning Immunity, and Control Strategies</a></li>
+                    <li><a href="assets/presentations/age-structured-pde-epidemiology.pdf" target="_blank">Age-Structured PDE Epidemiology Models</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 <!-- Students -->
 <section id="students" class="resume-section">
   <div class="resume-section-content">
