Update presentation links in index.html

--- a/index.html
+++ b/index.html
@@ -208,10 +208,8 @@
                 <!-- Presentations -->
                 <div class="subheading mb-3 mt-4">Presentations</div>
                 <ul>
-                    <li><a href="assets/presentations/eye2heart-talk.pdf" target="_blank">Eye2Heart Model – Cardiovascular–Ocular Coupling (Slides)</a></li>
-                    <li><a href="assets/presentations/retinal-waveforms-talk.pdf" target="_blank">Retinal Waveform Modeling and Parameters (Slides)</a></li>
-                    <li><a href="assets/presentations/ocular-fluid-dynamics-overview.pdf" target="_blank">Overview of Ocular Fluid Dynamics Modeling</a></li>
-                </ul>
+                    <li><a href="assets/presentations" target="_blank">Eye2Heart Model – Cardiovascular–Ocular Coupling</a></li>
+               </ul>
             </div>
         </div>
 
@@ -227,9 +225,7 @@
                 <!-- Presentations -->
                 <div class="subheading mb-3 mt-4">Presentations</div>
                 <ul>
-                    <li><a href="assets/presentations/sir-models-talk.pdf" target="_blank">SIR & SEIR Models – Core Concepts and Extensions</a></li>
-                    <li><a href="assets/presentations/vaccination-control-talk.pdf" target="_blank">Vaccination, Waning Immunity, and Control Strategies</a></li>
-                    <li><a href="assets/presentations/age-structured-pde-epidemiology.pdf" target="_blank">Age-Structured PDE Epidemiology Models</a></li>
+                    <li><a href="assets/presentations/Infectious.pdf" target="_blank">From Equations to Impact: The Art of Modeling Infectious Diseases</a></li>               
                 </ul>
             </div>
         </div>
