Enhance research section with detailed description
Added a paragraph detailing research interests and methods.

--- a/index.html
+++ b/index.html
@@ -192,7 +192,24 @@
 <section class="resume-section" id="research">
     <div class="resume-section-content">
         <h2 class="mb-5">Research</h2>
+<p class="lead">
+    My research lies at the intersection of applied mathematics, data science, and biomedical modeling.
+    I focus on developing mechanistic and data-driven models that connect cardiovascular and ocular dynamics,
+    analyze physiological signals, and support clinical decision-making.
+    I am also interested in mathematical epidemiology, including age-structured models,
+    intervention strategies, and the integration of data analytics with infectious disease modeling.
+    Much of my work is interdisciplinary, bringing together mathematicians, clinicians, engineers,
+    and data scientists to address complex real-world problems.
+</p>
 
+<h3 class="mb-3">Methods & Technical Skills</h3>
+<ul>
+    <li>Mathematical modeling: ODEs, PDEs, age-structured systems, optimal control</li>
+    <li>Numerical methods: FEM, finite differences, stability analysis, optimization algorithms</li>
+    <li>Programming: Python, MATLAB, R, C/C++, Julia</li>
+    <li>Data analytics: statistical modeling, machine learning, visualization</li>
+    <li>HPC & scientific computing workflow</li>
+</ul>
         <!-- Ocular & Cardiovascular Modeling -->
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
