Add Research Areas section to index.html

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <li>Data analytics: statistical modeling, machine learning, visualization</li>
     <li>HPC & scientific computing workflow</li>
 </ul>
+		<h3 class="mb-4 mt-5">Research Areas</h3>
         <!-- Ocular & Cardiovascular Modeling -->
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
