Add personal interests section to resume
Added a new section for personal interests with details about hobbies and activities.

--- a/index.html
+++ b/index.html
@@ -319,15 +319,21 @@
   </div>
 </section>
 
-            <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p></p>
-                    <p class="mb-0"></p>
-                </div>
-            </section>
+           <section class="resume-section" id="interests">
+    <div class="resume-section-content">
+        <h2 class="mb-5">Personal Interests</h2>
+        <p>
+            Outside of research and teaching, I enjoy staying active, exploring new cultures,
+            and spending time on creative or strategic hobbies.
+        </p>
+        <ul>
+            <li>Sports: volleyball, tennis, pickleball, ping pong, and biking</li>
+            <li>Traveling to different countries and learning about their history, culture, and languages</li>
+            <li>Board games and strategy/simulation computer games (e.g., Frostpunk)</li>
+            <li>Exploring new apps, gadgets, and productivity tools</li>
+        </ul>
+    </div>
+</section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
