Remove specific game mention from hobbies list

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <ul>
             <li>Sports: volleyball, tennis, pickleball, ping pong, and biking</li>
             <li>Traveling to different countries and learning about their history, culture, and languages</li>
-            <li>Board games and strategy/simulation computer games (e.g., Frostpunk)</li>
+            <li>Board games and strategy/simulation computer games </li>
             <li>Exploring new apps, gadgets, and productivity tools</li>
         </ul>
     </div>
